@@ -8,6 +8,8 @@ CHANGELOG
 * class App : added support for technology, categories fields
 * class App : added support for evasive-behavior, consume-big-bandwidth, used-by-malware, able-to-transfer-file, has-known-vulnerability, tunnel-other-application fields
 * class App : added support for  prone-to-misuse, pervasive-use, risk, virus-ident, file-type-ident, file-forward, is-saas fields
+* class AppStore: added support for application-group and application-filter
+* class PANConf/PanoramaConf/VirtualSystem: add support for application-group and application-filter
 
 utils:
 address-edit: new filter tag has / has.nocase / has.regex and tag.count >,<,=,! / object is.recursive.member.of
